Fix cards layout issues on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ header nav a {
   margin-top: 40px;
   margin-bottom: 40px;
   color: #333333;
+  font-family: "Raleway";
   text-decoration: none;
 }
 header nav button {
@@ -295,15 +296,11 @@ header .menu--icon {
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 768px) {
   .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 377px;
+    max-width: 425px;
     width: 100%;
     margin: 0 auto;
-    padding: 0 1.5rem;
   }
   .cards .card {
     width: 100%;
@@ -314,16 +311,35 @@ header .menu--icon {
     border-radius: 100%;
   }
 }
+@media screen and (max-width: 426px) {
+  .cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 327px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+  }
+  .cards .card {
+    width: 100%;
+  }
+  .cards .card .card__upper--content__img {
+    width: 265px;
+    height: 105px;
+    border-radius: 100%;
+  }
+}
 @media screen and (max-width: 376px) {
   .cards {
     margin: 0 auto;
-    max-width: 327px;
+    max-width: 272px;
     width: 100%;
     padding: 0 1.5rem;
   }
   .cards .card .card__upper--content__img {
-    width: 300px;
-    height: 117px;
+    width: 425px;
+    height: 105px;
     border-radius: 100%;
   }
 }
