--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -24,6 +24,7 @@ header {
       margin-top: 40px;
       margin-bottom: 40px;
       color: $black_color;
+      font-family: $primary_font;
       text-decoration: none;
     }
     button {
